Ieliku dažus virsrakstus boldā

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">Kas ir &lt;span&gt; un kā to pielieto?</h3>
+  <h3 class="margin" style="font-weight: 700">Kas ir &lt;span&gt; un kā to pielieto?</h3>
   <p> &lt;span&gt; ir tags, ko izmanto, lai pievienotu <span style="color: #aef3eb">krāsu </span> teksta daļai </p> 
   <br>
   <button style="color: #2f2f2f" onclick="window.location.href='https://www.w3schools.com/tags/tag_span.asp';"> Info par span </button>
@@ -67,7 +67,7 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-5 text-center">
-    <h3 class="margin">Kas ir &lt;&gt; un kā tos pielieto?</h3>
+    <h3 class="margin" style="font-weight: 700">Kas ir &lt;&gt; un kā tos pielieto?</h3>
   <p> &lt;&gt; Ir simboli, kurus izmanto, lai izsauktu visus tagus html valodā </p>
   <button onclick="window.location.href='https://www.w3schools.com/html/html_entities.asp';"> Info par &lt;&gt; </button>
 </div>
