--- a/index.html
+++ b/index.html
@@ -41,55 +41,56 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">DIV</a></li>
-        <li><a href="#">SPAN</a></li>
-        <li><a href="#">IEKAVAS</a></li>
+        <li><a href="#div">DIV</a></li>
+        <li><a href="#span">SPAN</a></li>
+        <li><a href="#vairmaz">&lt&gt</a></li>
+        <li><a href="#knifi">CSS knifi</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <!-- First Container -->
-<div class="container-fluid bg-1 text-center">
-    <h3 class="margin" style="font-weight: 700">Kas ir &lt;div&gt; un kā to pielieto ?</h3>
+<div id="div" class="container-fluid bg-1 text-center">
+    <h3  class="margin" style="font-weight: 700">Kas ir &lt;div&gt; un kā to pielieto ?</h3>
   <img src="images/div.jpg" class="img-responsive margin" style="display:inline" alt="Bird" width="400" height="240">
   <p style="font-size: 20px">&lt;div&gt; ir tags, ko izmanto, lai definētu un rediģētu <br> specifisku html dokumenta sadaļu / konteineri </p>
-  <button style="color: #2f2f2f" onclick="window.location.href='https://www.w3schools.com/tags/tag_div.asp';"> Info par div </button>
+  <button style="color: #2f2f2f" onclick="window.open('https://www.w3schools.com/tags/tag_div.asp')" > Info par div </button>
 </div>
 
 <!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h3 class="margin" style="font-weight: 700">Kas ir &lt;span&gt; un kā to pielieto?</h3>
+<div id="span" class="container-fluid bg-2 text-center">
+  <h3  class="margin" style="font-weight: 700">Kas ir &lt;span&gt; un kā to pielieto?</h3>
   <p> &lt;span&gt; ir tags, ko izmanto, lai pievienotu <span style="color: #aef3eb">krāsu </span> teksta daļai </p> 
   <br>
-  <button style="color: #2f2f2f" onclick="window.location.href='https://www.w3schools.com/tags/tag_span.asp';"> Info par span </button>
+  <button style="color: #2f2f2f" onclick="window.open('https://www.w3schools.com/tags/tag_span.asp')"> Info par span </button>
 </div>
 
 <!-- Third Container (Grid) -->
-<div class="container-fluid bg-5 text-center">
+<div id="vairmaz" class="container-fluid bg-5 text-center">
     <h3 class="margin" style="font-weight: 700">Kas ir &lt;&gt; un kā tos pielieto?</h3>
   <p> &lt;&gt; Ir simboli, kurus izmanto, lai izsauktu visus tagus html valodā </p>
-  <button onclick="window.location.href='https://www.w3schools.com/html/html_entities.asp';"> Info par &lt;&gt; </button>
+  <button onclick="window.open('https://www.w3schools.com/html/html_entities.asp')"> Info par &lt;&gt; </button>
 </div>
 
 
 <!-- Fourth Container -->
-<div class="container-fluid bg-3 text-center">    
+<div id="knifi" class="container-fluid bg-3 text-center">    
   <h1  class="margin">CSS triki!</h1><br>
   <div class="row">
     <div class="col-sm-4">
         <h1>hover</h1>
-        <p>Izmantojot <span style="color: red">:hover</span> rīku, objekti reaģē, kad uz tiem novieto kursoru. <br>Info <a style="color:#1abc9c" href="https://www.w3schools.com/csSref/sel_hover.asp">šeit</a></p>
+        <p>Izmantojot <span style="color: red">:hover</span> rīku, objekti reaģē, kad uz tiem novieto kursoru. <br>Info <a style="color:#1abc9c" href="https://www.w3schools.com/csSref/sel_hover.asp" target="_blank">šeit</a></p>
       <img src="images/hover.png" class="virsu" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
         <h1>animation</h1> 
-              <p><span style="color: red">animation</span> ir īpašība, kas ļauj elementiem pāriet no viena stāvkoļa uz citu. <br>Info <a style="color:#1abc9c" href="https://www.w3schools.com/css/css3_animations.asp">šeit</a> <br> </p>
+              <p><span style="color: red">animation</span> ir īpašība, kas ļauj elementiem pāriet no viena stāvkoļa uz citu. <br>Info <a style="color:#1abc9c" href="https://www.w3schools.com/css/css3_animations.asp" target="_blank">šeit</a> <br> </p>
       <img src="images/animacija.png" class="animacija" style="width:100%" alt="Image" >
     </div>
     <div class="col-sm-4"> 
         <h1>filter</h1>
-        <p><span style="color: red">filter</span> īpašība definē vizuālos efektus elementiem (piemērā <i>saturate</i>).<br>Info <a style="color: #1abc9c;" href="https://www.w3schools.com/cssref/css3_pr_filter.asp">šeit</a></p>
+        <p><span style="color: red">filter</span> īpašība definē vizuālos efektus elementiem (piemērā <i>saturate</i>).<br>Info <a style="color: #1abc9c;" href="https://www.w3schools.com/cssref/css3_pr_filter.asp" target="_blank">šeit</a></p>
       <img src="images/filtrs.png" class="filtrs" style="width:100%" alt="Image">
     </div>
   </div>
