Pievienoju script navbar linijas no prezentacijas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script> 
+      window.onscroll = function() (myFunction());
+      var navbar = document.getElementByClassName("navbar");
+      var sticky = navbar.offsetTop;
+      function myFuncion(){
+          if(window.pageYOffset >= sticky){
+              navbar.classList.add("sticky");
+          }else{
+              navbar.classList.remove("sticky");
+          }
+    }              
+  </script>
   <style>
       .virsu:hover {border: 7px solid red;}
       .animacija:hover{
