Uztaisiju, ka generejas laukums + atmina.css fails. Bet viss ir sākuma stadijā

--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
   <h1  class="margin">CSS triki!</h1><br>
   <div class="row">
     <div class="col-sm-4">
-        <h1>hover</h1>
+        <h1 class = "margin">hover</h1>
         <p>Izmantojot <span style="color: red">:hover</span> rīku, objekti reaģē, kad uz tiem novieto kursoru. <br>Info <a style="color:#1abc9c" href="https://www.w3schools.com/csSref/sel_hover.asp" target="_blank">šeit</a></p>
       <img src="images/hover.png" class="virsu" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-        <h1>animation</h1> 
+        <h1 class = "margin">animation</h1> 
               <p><span style="color: red">animation</span> ir īpašība, kas ļauj elementiem pāriet no viena stāvkoļa uz citu. <br>Info <a style="color:#1abc9c" href="https://www.w3schools.com/css/css3_animations.asp" target="_blank">šeit</a> <br> </p>
       <img src="images/animacija.png" class="animacija" style="width:100%" alt="Image" >
     </div>
     <div class="col-sm-4"> 
-        <h1>filter</h1>
+        <h1 class = "margin">filter</h1>
         <p><span style="color: red">filter</span> īpašība definē vizuālos efektus elementiem (piemērā <i>saturate</i>).<br>Info <a style="color: #1abc9c;" href="https://www.w3schools.com/cssref/css3_pr_filter.asp" target="_blank">šeit</a></p>
       <img src="images/filtrs.png" class="filtrs" style="width:100%" alt="Image">
     </div>
